# Mautrade

./: .env.production.example  LICENSE  README.md  deploy-vps.sh  dev.sh  docker-compose.prod.yml  push-to-vps.sh
.github/workflows/: deploy.yml  npm-publish.yml
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  test-email.go
backend/cmd/api/: main.go
backend/internal/config/: config.go
backend/internal/httpapi/: admin_auth.go  admin_execution_retry.go  admin_monitoring.go  admin_signals.go  auth.go  exchange_bindings.go  execution_results.go  gas_fee.go  handlers.go  server.go  settings.go  signals.go  users.go
backend/internal/mailer/: mailer.go
backend/internal/store/: admin_auth.go  admin_monitoring.go  admin_signals.go  admin_users.go  auth.go  dashboard.go  exchange_bindings.go  execution_results.go  execution_retry.go  gas_fee.go  settings.go  signals.go
backend/internal/workers/: gasfee_verifier.go
backend/migrations/: 000001_init.up.sql  000002_global_settings.up.sql  000003_drop_max_active_layers.down.sql  000003_drop_max_active_layers.up.sql  001_init.sql
backend/rust-node-execution/: Cargo.toml  Dockerfile  README.md
backend/rust-node-execution/src/: engine.rs  lib.rs  main.rs  types.rs
backend/rust-node-execution/src/adapters/: binance.rs  bybit.rs  mod.rs  okx.rs  tokocrypto.rs
frontend/: Dockerfile  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/: app.vue
frontend/app/components/: AdminActiveSignalRow.vue  AdminHeader.vue  AdminSidebar.vue  AppNavbar.vue  AuthMarketPanel.vue  LayerRow.vue  (+11 more)
(+53 files in other folders)
