[package]
name = "mautrade-rust-node-execution"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.47"
async-trait = "0.1"
futures-util = "0.3"
rust_decimal = { version = "1", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
